<resources>
    <string name="app_name">Encrypto</string>
    <string name="caesar_cipher">Caesar Cipher</string>
    <string name="play_fair_cipher">Play Fair Cipher</string>
    <string name="hill_cipher">Hill Cipher</string>
    <string name="rsa">RSA</string>
    <string name="diffie_hellman">Diffie Hellman</string>
    <string name="elgamal">ElGamal</string>
    <string name="navigation_header">Navigation Header</string>
    <string name="asymmetric_encryption">Asymmetric Encryption</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="symmetric_encryption">Symmetric Encryption</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="enter_plain_text">Enter Plain Text</string>
    <string name="cipher_text">Cipher Text =</string>
    <string name="plain_text">Plain Text =</string>
    <string name="test_text">Text</string>
    <string name="enter_public_key">Enter Public Key</string>
    <string name="enter_alice_private_key">Enter Alice Private Key</string>
    <string name="enter_bob_private_key">Enter Bob Private Key</string>
    <string name="calculate_alice_and_bob_public_key">Calculate Alice and Bob Public Key</string>
    <string name="calculate_public_keys_for_both">Calculate Public Keys for Both</string>
    <string name="calculate_shared_key_for_both">Calculate Shared key for Both</string>
    <string name="enter_shift">Enter Shift</string>
</resources>